--- a/src/tutorial/Tutorial.scss
+++ b/src/tutorial/Tutorial.scss
@@ -26,6 +26,13 @@
       font-size:18px;
     }
 
+    .p6o-welcome-intro {
+      padding:20px 0 20px 0;
+      margin:0;
+      line-height:160%;
+      font-size:16px;
+    }
+
     p {
       padding:20px 0 40px 0;
       margin:0;
